tests/NormalTests/paczka1/small_fuzzy/96443854.err
Error in line 6: kVYckmn S496 80,7
Error in line 7: Xztg S496 30,4
